--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <link rel="stylesheet" href="index.css">
 <head>
-    <title>HELLO WORLD</title>
+    <title>HELLO WORLD version 2</title>
 </head>
 <body>
     <h1 class="hello">HELLO WORLD</h1>
